pms/assignments/ass5wrks/beforeFTnavigation/output/output.catkin_make10
WARNING: Package name "randomNum_node" does not follow the naming conventions. It should start with a lower case letter and only contain lower case letters, digits and underscores.
[  1%] Built target talker
[  1%] [  2%] Built target sensor_msgs_generate_messages_py
Built target listener
[  5%] [  5%] Built target TBK
Built target randomNumTalker
[  7%] [  9%] Built target rosocvTalker
Built target randomNumListner
[ 10%] Built target rosocvListner
[ 10%] Built target sensor_msgs_generate_messages_cpp
[ 10%] Built target sensor_msgs_generate_messages_lisp
[ 11%] Built target image_publisher
[ 12%] [ 15%] Built target image_subscriber
Built target sample
Scanning dependencies of target map_to_image_node
[ 15%] Built target std_msgs_generate_messages_cpp
[ 17%] Built target random_walk
[ 18%] Built target node_example_gencfg
[ 18%] Built target std_msgs_generate_messages_lisp
[ 20%] [ 20%] Built target std_msgs_generate_messages_py
[ 20%] Built target _a3_help_generate_messages_check_deps_RequestGoal
Building CXX object a3_help/CMakeFiles/map_to_image_node.dir/src/map_to_image_node.cpp.o
[ 20%] Built target geometry_msgs_generate_messages_py
[ 20%] Built target _node_example_generate_messages_check_deps_NodeExampleData
[ 20%] Built target _lama_msgs_generate_messages_check_deps_PlaceProfile
[ 20%] Built target _lama_msgs_generate_messages_check_deps_GetLamaObject
[ 20%] [ 20%] Built target _lama_msgs_generate_messages_check_deps_GetPlaceProfile
[ 20%] Built target _lama_msgs_generate_messages_check_deps_InterfaceInfo
[ 20%] Built target _lama_msgs_generate_messages_check_deps_Crossing
Built target _lama_msgs_generate_messages_check_deps_Frontier
[ 20%] Built target _lama_msgs_generate_messages_check_deps_LamaObject
[ 20%] Built target _lama_msgs_generate_messages_check_deps_DescriptorLink
[ 20%] Built target geometry_msgs_generate_messages_cpp
[ 20%] [ 20%] Built target geometry_msgs_generate_messages_lisp
Built target _lama_msgs_generate_messages_check_deps_SetLamaObject
[ 20%] [ 20%] Built target _lama_msgs_generate_messages_check_deps_GetInterfaceInfo
[ 20%] [ 20%] Built target _lama_msgs_generate_messages_check_deps_SetPlaceProfile
Built target _lama_msgs_generate_messages_check_deps_SetCrossing
Built target _lama_msgs_generate_messages_check_deps_GetCrossing
[ 22%] [ 23%] Built target a3_help_generate_messages_py
[ 24%] [ 25%] [ 28%] Built target a3_help_generate_messages_lisp
Built target a3_help_generate_messages_cpp
Built target node_example_generate_messages_cpp
Built target node_example_generate_messages_py
[ 29%] [ 35%] [ 47%] Built target node_example_generate_messages_lisp
Built target a3_help_generate_messages
Built target lama_msgs_generate_messages_py
[ 62%] Built target lama_msgs_generate_messages_lisp
[ 77%] Built target lama_msgs_generate_messages_cpp
[ 77%] Built target _voice_node_generate_messages_check_deps_voice_node
[ 77%] Built target node_example_generate_messages
[ 77%] Built target _local_map_generate_messages_check_deps_SaveMap
[ 80%] Built target talker.node_example
[ 80%] [ 82%] Built target lama_msgs_generate_messages
Built target listener.node_example
[ 85%] [ 87%] [ 87%] Built target map_ray_caster
Built target voice_node_generate_messages_py
Built target voice_node_generate_messages_cpp
[ 88%] Built target voice_node_generate_messages_lisp
[ 90%] [ 91%] Built target local_map_generate_messages_lisp
Built target local_map_generate_messages_py
[ 92%] Built target local_map_generate_messages_cpp
[ 92%] Built target voice_node_generate_messages
[ 97%] [ 97%] Built target simpleSub
Built target simplePub
[ 97%] Built target local_map_generate_messages
[100%] Built target local_map
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/map_to_image_node.cpp: In function ‘int main(int, char**)’:
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/map_to_image_node.cpp:325:67: error: no matching function for call to ‘MapAsImageProvider::imageCallback(void (GazeboRetrieve::*)(const ImageConstPtr&))’
   (map_image_provider.imageCallback(&GazeboRetrieve::imageCallback)) );
                                                                   ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/map_to_image_node.cpp:325:67: note: candidate is:
In file included from /lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/src/map_to_image_node.cpp:47:0:
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/include/a3_help/GazeboRetrieve.h:44:8: note: void GazeboRetrieve::imageCallback(const ImageConstPtr&)
   void imageCallback(const sensor_msgs::ImageConstPtr& msg);
        ^
/lu1/smagri/uni/subj/proj30cp/catkin_ws/src/a3_help/include/a3_help/GazeboRetrieve.h:44:8: note:   no known conversion for argument 1 from ‘void (GazeboRetrieve::*)(const ImageConstPtr&) {aka void (GazeboRetrieve::*)(const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&)}’ to ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’
make[2]: *** [a3_help/CMakeFiles/map_to_image_node.dir/src/map_to_image_node.cpp.o] Error 1
make[1]: *** [a3_help/CMakeFiles/map_to_image_node.dir/all] Error 2
make: *** [all] Error 2
Base path: /lu1/smagri/uni/subj/proj30cp/catkin_ws
Source space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/src
Build space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/build
Devel space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/devel
Install space: /lu1/smagri/uni/subj/proj30cp/catkin_ws/install
####
#### Running command: "make cmake_check_build_system" in "/lu1/smagri/uni/subj/proj30cp/catkin_ws/build"
####
####
#### Running command: "make -j8 -l8" in "/lu1/smagri/uni/subj/proj30cp/catkin_ws/build"
####
Invoking "make -j8 -l8" failed
